# string-to-input-event-codes

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
